--- a/styles.css
+++ b/styles.css
@@ -368,8 +368,8 @@ img {
 }
 
 .text-box {
-    background-color: #ed0b0b; /* Light grey background */
-    border: 2px solid #dbdf1b; /* Subtle border */
+    background-color: #49d4d4; /* Light grey background */
+    border: 2px solid #060606; /* Subtle border */
     border-radius: 10px; /* Rounded corners */
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Shadow for depth */
     padding: 20px;
